XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>

* Adding support for Shift+Del - copy to a buffer and delete a selected text
  (if so) or the current line. Issue #285.
* Making HOME/END jumping to the beginning/end of the visible line. Issue #284.
* Adding support for Alt+Up and Alt+Down hot keys
* Switching history hot keys to Alt+PgDown and Alt+PgUp
* Adding support for Alt+Left and Alt+Right hot keys
* Bug fix: check that all the modified files are saved before letting a new
  project to be created. Issue #273.
* Move the focus to the text editor if the focus was not in the editor and the
  currently active tab is clicked. Issue #264.

2011 Oct 19  Sergey Satskiy <sergey.satskiy@gmail.com>

* Release 1.2
* Adding support for commenting/uncommenting a single line or selected lines.
  Issue #11.
* Adding support for Shift+Tab in the text editor: dedent a line or the selected
  lines. Issue #282.
* Making the format string for modified files configurable. The default value
  is "%s *". Issue #280.
* Making autoindent switched on by default. Issue #279.
* Do not set the font size explicitly in the simple line counter window.
* Bug fix: exception during checking for a newer version. Issue #272.
* Bug fix: proper on/off of the braces highlight. Issue #238.
* Bug fix: enable 'remove recent project' toolbar button properly. Issue #271.
* Expand/collapse grouping items in the object browsers regardless what column
  was double clicked. Issue #242

2011 Sep 13  Sergey Satskiy <sergey.satskiy@gmail.com>

* Release 1.1
* Improvement: provide a hint message in case if pymetrics failed. Issue #265.
* Bug fix: exception in the files browser if there is a syntactically incorrect
  python file in it. Issue #266.

2011 Sep 2  Sergey Satskiy <sergey.satskiy@gmail.com>

* Prepared for first release.